# todo_evolution

./: .gitignore  README.md
phase-1-console/: CLAUDE.md  README.md  demo_rich_format.py  manual_test.py  pyproject.toml  test_table_format.py
phase-1-console/.specify/memory/: constitution.md
phase-1-console/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
phase-1-console/history/prompts/1-todo-cli/: 001-complete-implementation.green.prompt.md  1-generate-tasks-md.tasks.prompt.md  2-spec-clarifications.spec.prompt.md
phase-1-console/history/prompts/constitution/: 001-evolution-todo-constitution-update.constitution.prompt.md
phase-1-console/history/prompts/todo-cli/: 001-in-memory-todo-cli.spec.prompt.md  002-todo-cli-planning.plan.prompt.md
phase-1-console/specs/1-todo-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-1-console/specs/1-todo-cli/checklists/: requirements.md
phase-1-console/specs/1-todo-cli/contracts/: todo-service-contract.md
phase-1-console/src/todo_cli/: main.py
phase-1-console/src/todo_cli/cli/: menu.py
phase-1-console/src/todo_cli/core/: exceptions.py
phase-1-console/src/todo_cli/models/: todo_task.py
phase-1-console/src/todo_cli/services/: todo_service.py
phase-1-console/tests/: conftest.py
phase-1-console/tests/integration/: test_cli_integration.py
phase-1-console/tests/unit/models/: test_todo_task.py
phase-1-console/tests/unit/services/: test_todo_service.py
phase-2-agentic-web/: README.md  main.py  pyproject.toml
specs/: 2-phase-2-spec.md
(+1 files in other folders)
