[project]
name = "todo-cli"
version = "0.1.0"
description = "In-Memory Todo CLI Application"
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "TodoCLI Team"}]
dependencies = [
    "tabulate>=0.9.0",
    "rich>=14.0.0"
]

[project.scripts]
todo-cli = "todo_cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]